# os

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.bat  build.sh  grub.sh  run.bat
src/kernel/arch/i686/: boot.asm  ports.c  tty.c
src/kernel/include/arch/i686/: ports.h  vga.h
src/kernel/include/kernel/: tty.h
src/kernel/kernel/: kernel.cpp
src/libc/ctype/: ctype.c
src/libc/include/: ctype.h  stdio.h  stdlib.h  string.h
src/libc/include/sys/: cdefs.h
src/libc/stdio/: printf.c  vprintf.c
src/libc/stdlib/: itoa.c  uitoa.c
src/libc/string/: strcmp.c  strlen.c  strrev.c
tmp/: idt.c  idt.h  isr.c  isr.h
